GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.24alpha15 :
        
        - 'edpykota --list' and 'pkusers --list' are now authorized 
          to mere mortal users, but the list is restricted to informations
          about the current user.
        
        - Extended the functionnality of the 'onbackenderror' directive to
          allow for configurable retries.
          
    - 1.24alpha14 :
    
        - Finished optimizations in edpykota and fixed some minor
          problems with LDAP.
          
    - 1.24alpha13 :
    
        - Introduced the pkusers command line tool to manage users and  
          users groups. This command doesn't deal with print quota entries,
          which continue to be managed through the edpykota command line
          tool.
          
        - Major rewrite and incompatible changes to command line options
          in edpykota. This command now only deals with print quota
          entries. Printers, users (or users groups) now have to be created
          first using pkprinters or pkusers.
          
    - 1.24alpha12 :
    
        - Introduced the 'duplicatesdelay' directive to specify after
          which duration two duplicate jobs are not considered duplicate
          jobs anymore.
          
        - Introduced the 'balancezero' directive to specify any value  
          as the balance limit instead of 0.0. This can allow admins to
          give a few free credits to users, for example.
          
    - 1.24alpha11 :
    
        - Huge speed improvements when modifying billing codes and
          printers.
        
        - Both pkbcodes and pkprinters now display the percent done
          for all actions.